fix: Responsive layout issues of  all 4 single store page header templates

--- a/assets/src/less/store.less
+++ b/assets/src/less/store.less
@@ -527,9 +527,9 @@
                     padding: 0 15px;
 
                     .profile-info-summery {
-                        top: -55px;
                         color: #444;
                         width: 100%;
+                        margin-top: -55px;
                         padding: 0;
                         position: relative;
                         background: none;
@@ -591,7 +591,7 @@
                         padding: 10px;
 
                         .profile-info-head {
-                            width: 150px;
+                            width: 20%;
                             float: left;
 
                             .profile-img {
@@ -1250,6 +1250,24 @@
         width: 94% !important;
         margin-left: 3%;
     }
+
+    .dokan-single-store {
+        .profile-frame {
+            &.profile-frame-no-banner {
+                .profile-info-box {
+                    &.profile-layout-layout3 {
+                        .profile-info-summery-wrapper {
+                            .profile-info-summery {
+                                .profile-info-head {
+                                    width: 150px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 1199px) {
@@ -1273,7 +1291,7 @@
 
                         .profile-info-head {
                             position: relative;
-                            top: -45px;
+                            top: 0;
 
                             .store-name {
                                 color: inherit;
@@ -1303,7 +1321,7 @@
 
                             .dokan-store-info {
                                 position: relative;
-                                top: -45px;
+                                top: 0;
                                 padding: 0;
                                 width: 100%;
                                 margin: 0;
@@ -1342,7 +1360,7 @@
 
                             .store-social-wrapper {
                                 position: relative;
-                                top: -45px;
+                                top: 0;
                                 text-align: center;
 
                                 .store-social {
@@ -1363,11 +1381,10 @@
                 &.profile-layout-layout1 {
 
                     .profile-info-summery-wrapper {
-                        height: 275px;
                         padding: 0 8px;
 
                         .profile-info-summery {
-                            top: 6px;
+                            margin-top: 0px;
 
                             .profile-info-head {
                                 top: 0;
@@ -1408,6 +1425,10 @@
                                             display: inline-block;
                                         }
                                     }
+
+                                    .store-open-close-notice {
+                                        justify-content: flex-start;
+                                    }
                                 }
 
                                 .store-social-wrapper {
@@ -1442,16 +1463,25 @@
                         .profile-info-summery {
 
                             .profile-info {
+                                margin-top: 0;
 
                                 .store-name {
                                     position: relative;
-                                    top: -45px;
+                                    top: 0px;
                                     text-align: center;
                                     font-size: 20px;
-                                    margin-bottom: 8px;
+                                    margin-bottom: 10px;
                                     color: #444;
                                     text-shadow: none;
                                     font-weight: bold;
+                                }
+
+                                .dokan-store-info {
+                                    top: 0;
+                                }
+
+                                .store-social-wrapper {
+                                    top: 0;
                                 }
                             }
                         }
@@ -1488,6 +1518,10 @@
                                         &:before {
                                             content: "";
                                         }
+                                    }
+
+                                    .store-open-close-notice {
+                                        justify-content: flex-start;
                                     }
                                 }
 
